updated youtube link added

--- a/71f0453cb1846145f08b90e9b2ecd29ace933ec7/index.html
+++ b/71f0453cb1846145f08b90e9b2ecd29ace933ec7/index.html
@@ -44,7 +44,7 @@
                     <img src="./assets/img/banner.png" alt="">
                 </figure>
                 <div class="banner__video-wrapper">
-                    <iframe class="banner__video"  src="https://www.youtube.com/embed/otqOTwjSRAk?controls=0"
+                    <iframe class="banner__video"  src="https://www.youtube.com/watch?v=DVrZ3hAb8KU"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
                 </div>
