updated link version

--- a/71f0453cb1846145f08b90e9b2ecd29ace933ec7/index.html
+++ b/71f0453cb1846145f08b90e9b2ecd29ace933ec7/index.html
@@ -41,10 +41,10 @@
             <section class="banner">
                 <h1 class="banner__heading--hidden">BANNER</h1>
                 <figure class="banner__fig">
-                    <img src="./assets/img/banner.png" alt="">
+                    <img src="./assets/img/banner.jpg" alt="">
                 </figure>
                 <div class="banner__video-wrapper">
-                    <iframe class="banner__video"  src="https://www.youtube.com/embed/=DVrZ3hAb8KU"
+                    <iframe class="banner__video"  src="https://www.youtube.com/embed/DVrZ3hAb8KU"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
                 </div>
