updated link version

--- a/71f0453cb1846145f08b90e9b2ecd29ace933ec7/index.html
+++ b/71f0453cb1846145f08b90e9b2ecd29ace933ec7/index.html
@@ -118,7 +118,7 @@
                                     class="izumo__btn--top">オンラインショップはこちら</a>
                                 <ul class="izumo__link-list">
                                     <li class="izumo__link-item">
-                                        <a href="https://www.google.com/maps/place/%E5%87%BA%E8%A5%BF%E7%AA%AF(%E3%81%97%E3%82%85%E3%81%A3%E3%81%95%E3%81%84%E3%81%8C%E3%81%BE)/@35.358471,132.79359,17z/data=!3m1!4b1!4m5!3m4!1s0x3557416801a5490b:0xb200e2282253dd18!8m2!3d35.3583847!4d132.7957978?hl=ja"
+                                        <a href="https://www.google.com/maps/place/Shussai+Pottery/@35.3584688,132.7949,18z/data=!4m12!1m6!3m5!1s0x3557416801a5490b:0xb200e2282253dd18!2sShussai+Pottery!8m2!3d35.3583847!4d132.7957978!3m4!1s0x3557416801a5490b:0xb200e2282253dd18!8m2!3d35.3583847!4d132.7957978"
                                             target="_blank" class="izumo__btn">地図</a>
                                     </li>
                                     <li class="izumo__link-item">
